[package]
name = "as-any"
version = "0.2.1"
description = "provide the AsAny trait"
categories = ["no-std", "rust-patterns"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smol-rs/as-any"

[dependencies]

[features]
alloc = []

[package.metadata.docs.rs]
all-features = true
